# AIM-OS

./: .env.example  .gitignore  README.md  main.py  prompt.md  prompt_json_schema.json  requirements.txt
lib/: lib.py
modules/ldi/: ldi.py
modules/llm/: llm.py
modules/metacommands/: metacommands.json  metacommands.py
modules/os_info/: os_info.py
modules/sci/: sci.py
modules/sys_info/: Cargo.toml  info.sh
modules/sys_info/src/: main.rs
