[package]
name = "sysinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.7"
tokio = { version = "1", features = [ "full" ] }
chrono = "0.4"
regex = "1.10.4"
lazy_static = "1.4.0"
machine-info = "1.0.9"
os_info = { version = "3", default-features = false }